--- a/index_about.html
+++ b/index_about.html
@@ -83,8 +83,8 @@
                         <div class="status_discord"></div>
                     </div>
                     <div class="true-nick_name">
-                        <span class="true_name">Tokisaki Nino<span class="nick_name"> (Guardian of Heaven) </span></span>
-                        <span class="pronuns">🌠Nino/Nio/He/Him/You/Senpai/Kouhai</span>
+                        <span class="true_name">Tokisaki Nino <span class="nick_name"> (Guardian of Heaven) </span></span>
+                        <span class="pronuns">🌠Nio/He/Him</span>
                         <ul class="weiu">
                             <li><span class="following">[11]</span> Following</li>
                             <li><span class="count_post">[!!]</span> Posts</li>
@@ -93,10 +93,11 @@
                     </div>
                 </div>
                 <div class="more_options">
-                    <div class="more_options_">
+                    <a class="more_options_" href="https://github.com/TokisakiNinoVn" target="_blank">
                         <!-- <ion-icon class="follow_icon" name="add-outline"></ion-icon> -->
                         <ion-icon class="follow_icon" name="logo-github"></ion-icon>
-                        <span class="follow">Follow</span></div>
+                        <span class="follow">Follow</span>
+                    </a>
                     <div id="like_like" class="more_options_ like">
                         <ion-icon class="like_icons like_false active" name="heart-outline"></ion-icon>
                         <ion-icon class="like_icons like_true" name="heart"></ion-icon>
@@ -117,7 +118,7 @@
                     <div class="iuwk_iag">
                         <div class="infor_content_1">
                             <span class="icon_ghim icon_ghim_1">📌</span>
-                            <p>[ Yahoo! I'm Nino! Hobbies are usually listening to music, playing games, watching movies or going on adventures. One player solo/duo.</p>
+                            <p class="quotes_nino">[ Yahoo! I'm Nino! Hobbies are usually listening to music, playing games, watching movies or going on adventures. One player solo/duo.</p>
                         </div>
 
                         <div class="card_information">
@@ -145,17 +146,22 @@
                                             <span class="code_color_yellow">'...'</span><span class="code_color-pink">]</span>,
                                             </p>
                                             <p><span class="code_color_yellow">'game'</span>:
-                                            <span class="code_color-pink">[</span><a class="code_color_yellow" href="https://enka.network/u/855962110/" target="_blank">'Genshin Impact'</a>,
-                                            <span class="code_color_yellow">'Honkai Impact 3rd'</span>,
+                                            <span class="code_color-pink">[</span>
+                                                <!-- <a class="code_color_yellow" href="https://enka.network/u/855962110/" target="_blank">'Genshin Impact'</a>, -->
+                                                <!-- <a class="code_color_yellow" href="https://enka.network/u/855962110/" target="_blank">'Everything'</a>, -->
+                                            <span class="code_color_yellow">'Open-world'</span>,
+                                            <span class="code_color_yellow">'FPS Games'</span>,
+                                            <span class="code_color_yellow">'Anime Games'</span>,
                                             <span class="code_color_yellow">'...'</span><span class="code_color-pink">]</span>,</p>
                                             <p><span class="code_color_yellow">'favorite'</span>:
                                             <span class="code_color-pink">[</span><a class="code_color_yellow" href="https://anilist.co/user/NNino/" target="_blank">'Anime'</a>, 
                                             <span class="code_color_yellow">'Music'</span>,
-                                            <span class="code_color_yellow">'Game'</span>,
-                                            <span class="code_color_yellow">'Coding'</span><span class="code_color-pink">]</span>,</p>
+                                            <span class="code_color_yellow">'Games'</span>
+                                            <!-- <span class="code_color_yellow">'Coding'</span> -->
+                                            <span class="code_color-pink">]</span>,</p>
                                             <div class="code_descript">
-                                            <p><span class="code_color_yellow">'descript'</span>:</p>
-                                            <p> <span class="code_color_yellow">'I am an Information Technology student. I'm a person who likes new things and I really like programming. I hope to become a good programmer in the future.'</span></p>
+                                                <p><span class="code_color_yellow">'descript'</span>:</p>
+                                                <p> <span class="code_color_yellow">'No clear personality, emotionless and colorless..'</span>,</p>
                                             </div>
                                         </div>
                                     <p>}</p>
@@ -164,7 +170,7 @@
                         </div>
                         <div class="infor_content_1">
                             <span class="icon_ghim icon_ghim_2">🍀</span>
-                            <p>[ "Tell me something. If i'm gonna stay around, what kind of person do you want me to be you? someone you work with? a competitor, who challenges you to sharpen your game? just another name on your long list of acquaintances, or... somebody more important than that? Depending on what you're hopping for, i can either play that part or become that person.".</p>
+                            <p class="quotes_nino">[ "Tell me something. If i'm gonna stay around, what kind of person do you want me to be you? someone you work with? a competitor, who challenges you to sharpen your game? just another name on your long list of acquaintances, or... somebody more important than that? Depending on what you're hopping for, i can either play that part or become that person.".</p>
                         </div>
                         
                     </div>
