--- a/index_about.html
+++ b/index_about.html
@@ -194,23 +194,30 @@
         <div class="img_banner_elysia">
             <div class="main_ely">
                 <img class="img_banner" src="./assets/image/Elysia.full.3784764.jpg" alt="elysia">
-                <div class="tool_ely">
-                    <div class="control_volume">
-                        <ion-icon class="contr_volumeicon mute_volume-false active" name="volume-high"></ion-icon>
-                        <ion-icon class="contr_volumeicon mute_volume-true" name="volume-mute-outline"></ion-icon>
-                    </div>
-                    <div class="control_play">
-                        <ion-icon class="icon_control play_icon active" name="play"></ion-icon>
-                        <ion-icon class="icon_control pause_icon" name="stop"></ion-icon>
-                    </div>
-                    <a href="https://www.youtube.com/watch?v=k-K28-A4fBc" target="_blank">
-                        <ion-icon name="code-slash-outline"></ion-icon>
-                    </a>
-                </div>
             </div>
-            </div>
+        </div>
     </div>
 
+
+    <div class="qiouw">
+        <div class="tool_ely">
+            <div class="control_volume">
+                <ion-icon class="contr_volumeicon mute_volume-false active" name="volume-high"></ion-icon>
+                <ion-icon class="contr_volumeicon mute_volume-true" name="volume-mute-outline"></ion-icon>
+            </div>
+            <div class="control_play">
+                <ion-icon class="icon_control play_icon active" name="play"></ion-icon>
+                <ion-icon class="icon_control pause_icon" name="stop"></ion-icon>
+            </div>
+            <a href="https://www.youtube.com/watch?v=k-K28-A4fBc" target="_blank">
+                <ion-icon name="code-slash-outline"></ion-icon>
+            </a>
+            <div class="weiurf">
+                <ion-icon class="hidden_control hidden_control " name="chevron-back-outline"></ion-icon>
+                <ion-icon class="hidden_control view_control active" name="chevron-forward-outline"></ion-icon>
+            </div>
+        </div>
+    </div>
 
     <button class="scrollToTopBtn "></button>
 
