--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
               <div class="menu-navbar-right">
                 <ul class="list">
                   <li class="limenuRight"><a href="index.html">Home</a></li>
-                  <li class="limenuRight"><a href="./404.html">Posts</a></li>
+                  <!-- <li class="limenuRight"><a href="./404.html">Posts</a></li> -->
                   <li class="limenuRight"><a href="./index_project.html">Projects</a></li>
                   <li class="limenuRight"><a href="./404.html">Messages</a></li>
                   <li class="limenuRight"><a href="index_about.html">About</a></li>
-                  <li class="limenuRight">
+                  <!-- <li class="limenuRight">
                       <div class="toggle-btn _1st-toggle-btn" id="mode-link" onclick="toggleLightMode()">
                         <input type="checkbox">
                         <span></span>
                       </div>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
         </nav> 
@@ -173,11 +173,11 @@
 
     <!--_______________________________________________________________ [ JavaScripts ] ____________________-->
     <script src="./assets/js/js_index.js"></script>
-    <script>
+    <!-- <script>
       function toggleMode() {
         document.body.classList.toggle('dark-mode');
       }
-    </script>
+    </script> -->
 
   </body>
 </html>
