--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
   </head>
 
   <body class="dark-mode">
-    <!-- <header>
+    <header>
       <div class="container">
           <nav class="navbar">
             <div class="navbar-header-logo">
@@ -44,21 +44,21 @@
               <div class="menu-navbar-right">
                 <ul class="list">
                   <li class="limenuRight"><a href="index.html">Home</a></li>
-                  <li class="limenuRight"><a href="./404.html">Actions</a></li>
+                  <!-- <li class="limenuRight"><a href="./404.html">Actions</a></li> -->
                   <li class="limenuRight"><a href="./404.html">Projects</a></li>
-                  <li class="limenuRight"><a href="./404.html">Messages</a></li>
+                  <li class="limenuRight"><a href="./404.html"><b>Messages</b></a></li>
                   <li class="limenuRight"><a href="index_about.html">About</a></li>
-                  <li class="limenuRight">
+                  <!-- <li class="limenuRight">
                       <div class="toggle-btn _1st-toggle-btn" id="mode-link" onclick="toggleLightMode()">
                         <input type="checkbox">
                         <span></span>
                       </div>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
         </nav> 
       </div>
-    </header> -->
+    </header>
 
     <div class="main">
         <img src="./assets/image/Ai.jpg" alt="Hoshino Ai">
