--- a/index_about.html
+++ b/index_about.html
@@ -47,16 +47,16 @@
                 <div class="menu-navbar-right">
                 <ul class="list">
                     <li class="limenuRight"><a href="index.html">Home</a></li>
-                    <li class="limenuRight"><a href="./404.html">Posts</a></li>
+                    <!-- <li class="limenuRight"><a href="./404.html">Posts</a></li> -->
                     <li class="limenuRight"><a href="./index_project.html">Projects</a></li>
                     <li class="limenuRight"><a href="./404.html">Messages</a></li>
                     <li><a href="index_about.html"><b>About</b></a></li>
-                    <li>
+                    <!-- <li>
                         <div class="toggle-btn _1st-toggle-btn" id="mode-link" onclick="toggleLightMode()">
-                        <input type="checkbox">
-                        <span></span>
+                            <input type="checkbox">
+                            <span></span>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
             
             </nav> 
