--- a/index_project.html
+++ b/index_project.html
@@ -39,16 +39,16 @@
               <div class="menu-navbar-right">
                 <ul class="list">
                   <li class="limenuRight"><a href="index.html">Home</a></li>
-                  <li><a href="./404.html">Actions</a></li>
+                  <!-- <li><a href="./404.html">Actions</a></li> -->
                   <li><a href="index_project.html"><b>Projects</b></a></li>
                   <li><a href="./404.html">Messages</a></li>
                   <li><a href="index_about.html">About</a></li>
-                  <li>
+                  <!-- <li>
                       <div class="toggle-btn _1st-toggle-btn" id="mode-link">
                         <input type="checkbox">
                         <span></span>
                       </div>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
         </nav> 
