--- a/index_messages.html
+++ b/index_messages.html
@@ -99,11 +99,12 @@
         <!-- JavaScripts -->
     <script src="./assets/js/js_index.js"></script>
     <script src="./assets\js\js_messages.js"></script>
-    <script>
+    <!-- <script>
       function toggleMode() {
         document.body.classList.toggle('dark-mode');
       }
-    </script>
+    </script> -->
 
+    <script src="./assets/js/js_protect.js"></script>
   </body>
 </html>
