--- a/index_project.html
+++ b/index_project.html
@@ -94,6 +94,7 @@
         document.body.classList.toggle('dark-mode');
       }
     </script>
-
+    
+    <script src="./assets/js/js_protect.js"></script>
   </body>
 </html>
