--- a/index_about.html
+++ b/index_about.html
@@ -110,8 +110,8 @@
             <div class="main_about_scroll-child">
 
                 <ul class="menu_options">
-                    <li id="basic_status" class="active_">✨Information</li>
-                    <li id="post_status">🎨Posts</li>
+                    <li id="basic_status" class="mwehgf active_">✨Information</li>
+                    <li id="post_status" class="mwehgf">🎨Posts</li>
                     <!-- <li>Contacts</li> -->
                 </ul>
                 <div class="basic_infor active">
