--- a/index_about.html
+++ b/index_about.html
@@ -111,7 +111,7 @@
 
                 <ul class="menu_options">
                     <li id="basic_status" class="mwehgf active_">✨Information</li>
-                    <li id="post_status" class="mwehgf">🎨Posts</li>
+                    <li id="post_status" class="mwehgf">🎨Blogs</li>
                     <!-- <li>Contacts</li> -->
                 </ul>
                 <div class="basic_infor active">
