--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@
                 <ul class="list">
                   <li class="limenuRight"><a href="index.html">Home</a></li>
                   <!-- <li class="limenuRight"><a href="./404.html">Actions</a></li> -->
-                  <li class="limenuRight"><a href="./404.html">Projects</a></li>
+                  <li class="limenuRight"><a href="./index_project.html">Projects</a></li>
                   <li class="limenuRight"><a href="./404.html"><b>Messages</b></a></li>
                   <li class="limenuRight"><a href="index_about.html">About</a></li>
                   <!-- <li class="limenuRight">
