--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <meta property="og:title" content="Tokisaki Nino">
-    <meta property="og:description" content="Hallo!">
-    <meta property="og:site_name" content="nino.is-a.dev">
-    <meta name="theme-color" content="#00fff2;">
-    <meta property="og:image" content="assets\image\march7th.jpg">
+    <meta property="og:description" content="Yahoo, I'm Nino!">
+    <meta property="og:site_name" content="@TokisakiNinoVn">
+    <meta name="theme-color" content="#c035dc">
+    <meta property="og:image" content="https://i.pinimg.com/originals/db/30/8e/db308ea5df04eaea893accbdd048e183.jpg">
 
     <title>Tokisaki Nino</title>
     <link rel="icon" href="./assets/image/Avt_cicle.ico">
@@ -79,7 +79,7 @@
     <div class="main">
       <div class="profile">
         <div class="avt"> 
-          <img id="my_avt" class="myavt" src="./assets/image/Avt.jpg">
+          <img id="my_avt" class="myavt" src="./assets/image/Avt.jpg" alt="Nino">
         </div> 
         <div class="name">Tokisaki Nino</div>
         <p class="description"> What kind of person do you expect me to be? Normal partner? Self-training subjects? A social acquaintance... or... an important teammate? Based on your attitude and expectations, I will "play" or "become" one of them".</p>
