--- a/index_about.html
+++ b/index_about.html
@@ -49,7 +49,7 @@
                     <li class="limenuRight"><a href="index.html">Home</a></li>
                     <!-- <li class="limenuRight"><a href="./404.html">Posts</a></li> -->
                     <li class="limenuRight"><a href="./index_project.html">Projects</a></li>
-                    <li class="limenuRight"><a href="./404.html">Messages</a></li>
+                    <!-- <li class="limenuRight"><a href="./404.html">Messages</a></li> -->
                     <li><a href="index_about.html"><b>About</b></a></li>
                     <!-- <li>
                         <div class="toggle-btn _1st-toggle-btn" id="mode-link" onclick="toggleLightMode()">
