--- a/index_project.html
+++ b/index_project.html
@@ -40,9 +40,19 @@
                 <ul class="list">
                   <li class="limenuRight"><a href="index.html">Home</a></li>
                   <!-- <li><a href="./404.html">Actions</a></li> -->
-                  <li><a href="index_project.html"><b>Projects</b></a></li>
-                  <li><a href="./404.html">Messages</a></li>
-                  <li><a href="index_about.html">About</a></li>
+                  <li>
+                    <a href="index_project.html">
+                      <ion-icon name="pulse-outline"></ion-icon>
+                      <b>Projects</b>
+                    </a>
+                  </li>
+                  <!-- <li><a href="./404.html">Messages</a></li> -->
+                  <li>
+                    <a href="index_about.html">
+                      <ion-icon name="scan-outline"></ion-icon>
+                      About
+                    </a>
+                  </li>
                   <!-- <li>
                       <div class="toggle-btn _1st-toggle-btn" id="mode-link">
                         <input type="checkbox">
@@ -68,14 +78,16 @@
         <div class="list_project">
           <img src="" alt="" class="preview">
           <div class="div_link">
-            <a href="" class="link_project"><span></span></a>            
+            <a href="" class="link_project">
+              <span></span>
+            </a>            
           </div>
         </div>
       </div>
 
     </div> 
 
-    <button class="scrollToTopBtn "></button>
+    <button class="scrollToTopBtn"></button>
 
     <!-- <footer id="footer" class="footer">
       <div class="copyright">
