--- a/index.html
+++ b/index.html
@@ -59,10 +59,12 @@
             
               <div class="menu-navbar-right">
                 <ul class="list">
-                  <li class="limenuRight"><a href="index.html">Home</a></li>
+                  <li class="limenuRight">
+                    <a href="index.html">Home</a>
+                  </li>
                   <!-- <li class="limenuRight"><a href="./404.html">Posts</a></li> -->
                   <li class="limenuRight"><a href="./index_project.html">Projects</a></li>
-                  <li class="limenuRight"><a href="./404.html">Messages</a></li>
+                  <!-- <li class="limenuRight"><a href="./404.html">Messages</a></li> -->
                   <li class="limenuRight"><a href="index_about.html">About</a></li>
                   <!-- <li class="limenuRight">
                       <div class="toggle-btn _1st-toggle-btn" id="mode-link" onclick="toggleLightMode()">
