--- a/index_project.html
+++ b/index_project.html
@@ -65,12 +65,6 @@
       </div>
     </header>
 
-    <!-- <div class="main">
-      <div class="list-res">
-        <div id="repositories" class=""></div>
-      </div>
-    </div>  -->
-
     <div class="main">
       <span class="title">My Project</span>
 
@@ -79,7 +73,7 @@
           <img src="" alt="" class="preview">
           <div class="div_link">
             <a href="" class="link_project">
-              <span></span>
+              <span class="tittle_project"></span>
             </a>            
           </div>
         </div>
@@ -89,12 +83,6 @@
 
     <button class="scrollToTopBtn"></button>
 
-    <!-- <footer id="footer" class="footer">
-      <div class="copyright">
-        <span class = "real">[💖Sugoii Family - By Tokisaki Nino💖]</span>
-      </div>
-
-    </footer> -->
     
     <script src="./assets/js/js_index.js"></script>
     <!-- <script src="./assets/js/js_project_github.js"></script> -->
