--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   </li>
                   <!-- <li class="limenuRight"><a href="./404.html">Posts</a></li> -->
                   <li class="limenuRight"><a href="./index_project.html">Projects</a></li>
-                  <!-- <li class="limenuRight"><a href="./404.html">Messages</a></li> -->
+                  <li class="limenuRight"><a href="./404.html">Messages</a></li>
                   <li class="limenuRight"><a href="index_about.html">About</a></li>
                   <!-- <li class="limenuRight">
                       <div class="toggle-btn _1st-toggle-btn" id="mode-link" onclick="toggleLightMode()">
