--- a/index_project.html
+++ b/index_project.html
@@ -101,15 +101,14 @@
           </ul>
         </div>
         <div class="list_project">
-
-          <div class="item_project">
+          <!-- <div class="item_project">
             <img src="" alt="" class="preview">
             <div class="div_link">
               <a href="" class="link_project">
                 <span class="tittle_project"></span>
               </a>            
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
