--- a/index_about.html
+++ b/index_about.html
@@ -223,7 +223,7 @@
 
         <script src="./assets/js/js_index.js"></script>
         <script src="./assets/js/js_abouts.js"></script>
-        <script src="./assets/js/postUpdate.js"></script>
+        <script type="module" src="./assets/js/postUpdate.js"></script>
         <script src="./assets/js/js_abouts_.js"></script>
         <script src="./assets/js/js_scrolltotop.js"></script>
         
