--- a/index_about.html
+++ b/index_about.html
@@ -41,12 +41,12 @@
         <div class="container">
             <nav class="navbar">
             <div class="navbar-header-logo">
-                <a href="index.html">Nino</a>
+                <a href="https://nino.is-a.dev/">Nino</a>
             </div>
             <div class="menu-toggle" onclick="toggleMenu()">☰ Menu</div>
                 <div class="menu-navbar-right">
                 <ul class="list">
-                    <li class="limenuRight"><a href="index.html">Home</a></li>
+                    <li class="limenuRight"><a href="https://nino.is-a.dev/">Home</a></li>
                     <!-- <li class="limenuRight"><a href="./404.html">Posts</a></li> -->
                     <li class="limenuRight"><a href="./index_project.html">Projects</a></li>
                     <li class="limenuRight"><a href="./404.html">Messages</a></li>
