--- a/index_project.html
+++ b/index_project.html
@@ -33,7 +33,7 @@
       <div class="container">
           <nav class="navbar">
             <div class="navbar-header-logo">
-              <a href="index.html">Nino</a>
+              <a href="https://nino.is-a.dev/MyOfficialWebsite/">Nino</a>
             </div>
             <div class="menu-toggle" onclick="toggleMenu()">☰ Menu</div>
               <div class="menu-navbar-right">
