--- a/index_project.html
+++ b/index_project.html
@@ -7,7 +7,11 @@
   
     <title>Tokisaki Nino | Projects</title>
     <link rel="icon" href="./assets/image/Avt_cicle.ico">
-    
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        
     <!-- style chung -->
     <link rel="stylesheet" href="./assets/css/style.css">
   
@@ -103,7 +107,9 @@
         <div class="list_project">
 
           <a href="https://nino.is-a.dev" class="item_project">
-            <img src="./assets/image/Elysia!!.jpg" alt="Img Project" class="preview">
+            <div class="div_for_img">
+              <img src="./assets/image/Elysia!!.jpg" alt="Img Project" class="preview">
+            </div>
               <div class="content_project">
                 <div class="top_content">
                   <div class="first_update">
@@ -127,6 +133,40 @@
                   <ion-icon name="eye-outline"></ion-icon>
                   <ion-icon name="code-slash-outline"></ion-icon>
                 </div>
+              </div>
+              <a href="http://" target="_blank" rel="noopener noreferrer" class="more_information_project">
+                <span class="view_more_p">More</span>
+                <ion-icon name="chevron-forward-outline"></ion-icon>
+              </a>
+          </a>
+
+          <a href="https://nino.is-a.dev" class="item_project">
+              <div class="content_project">
+                <div class="top_content">
+                  <div class="first_update">
+                    <ion-icon name="calendar-outline"></ion-icon>
+                    <span class="value_dayupdate">2023-11-05</span>
+                  </div>
+                  <div class="collection">
+                    <ion-icon name="bookmark-outline"></ion-icon>
+                    <span class="value_colection">100</span>
+                  </div>
+                </div>
+                <div class="tittle_project">
+                  <span class="value_tittle">My Card Information</span>
+                  <span class="value_description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam fugiat alias possimus sequi deleniti nihil dolor, molestias qui minus amet.</span>
+                </div>
+                <div class="kjww_amw">
+                  <div class="wiuk_language">
+                    <ion-icon name="repeat-outline"></ion-icon>
+                    <span class="value_language">HTML, CSS, JS</span>
+                  </div>
+                  <ion-icon name="eye-outline"></ion-icon>
+                  <ion-icon name="code-slash-outline"></ion-icon>
+                </div>
+              </div>
+              <div class="div_for_img">
+                <img src="./assets/image/Elysia!!.jpg" alt="Img Project" class="preview">
               </div>
               <a href="http://" target="_blank" rel="noopener noreferrer" class="more_information_project">
                 <span class="view_more_p">More</span>
