--- a/index_project.html
+++ b/index_project.html
@@ -106,46 +106,52 @@
         </div>
         <div class="list_project">
 
-          <a href="https://nino.is-a.dev" class="item_project">
+          <div href="https://nino.is-a.dev" class="item_project">
             <div class="div_for_img">
               <img src="./assets/image/Elysia!!.jpg" alt="Img Project" class="preview">
             </div>
-              <div class="content_project">
-                <div class="top_content">
-                  <div class="first_update">
-                    <ion-icon name="calendar-outline"></ion-icon>
-                    <span class="value_dayupdate">2023-11-05</span>
-                  </div>
-                  <div class="collection">
-                    <ion-icon name="bookmark-outline"></ion-icon>
-                    <span class="value_colection">100</span>
-                  </div>
+            <div class="content_project">
+              <div class="top_content">
+                <div class="first_update">
+                  <ion-icon name="calendar-outline"></ion-icon>
+                  <span class="value_dayupdate">2023-11-05</span>
                 </div>
-                <div class="tittle_project">
-                  <span class="value_tittle">My Card Information</span>
-                  <span class="value_description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam fugiat alias possimus sequi deleniti nihil dolor, molestias qui minus amet.</span>
-                </div>
-                <div class="kjww_amw">
-                  <div class="wiuk_language">
-                    <ion-icon name="repeat-outline"></ion-icon>
-                    <span class="value_language">HTML, CSS, JS</span>
-                  </div>
-                  <ion-icon name="eye-outline"></ion-icon>
-                  <ion-icon name="code-slash-outline"></ion-icon>
+                <div class="collection">
+                  <ion-icon name="bookmark-outline"></ion-icon>
+                  <span class="value_colection">100</span>
                 </div>
               </div>
+              <div class="tittle_project">
+                <span class="value_tittle">My Card Information</span>
+                <span class="value_description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam fugiat alias possimus sequi deleniti nihil dolor, molestias qui minus amet.</span>
+              </div>
+              <div class="kjww_amw">
+                <div class="wiuk_language mawh">
+                  <ion-icon name="repeat-outline"></ion-icon>
+                  <span class="value_language wkuj_wiue">HTML, CSS, JS</span>
+                </div>
+                <div class="mawh">
+                  <ion-icon name="eye-outline"></ion-icon>
+                  <span class="wkuj_wiue">View</span>
+                </div>
+                  <div class="mawh">
+                  <ion-icon name="code-slash-outline"></ion-icon>
+                  <span class="">Source</span>
+                </div>
+              </div>
+            </div>
               <a href="http://" target="_blank" rel="noopener noreferrer" class="more_information_project">
                 <span class="view_more_p">More</span>
                 <ion-icon name="chevron-forward-outline"></ion-icon>
               </a>
-          </a>
+          </div>
 
-          <a href="https://nino.is-a.dev" class="item_project">
+          <div href="https://nino.is-a.dev" class="item_project">
               <div class="content_project">
-                <div class="top_content">
+                <div class="top_content top_content_">
                   <div class="first_update">
                     <ion-icon name="calendar-outline"></ion-icon>
-                    <span class="value_dayupdate">2023-11-05</span>
+                    <span class="value_dayupdate ">2023-11-05</span>
                   </div>
                   <div class="collection">
                     <ion-icon name="bookmark-outline"></ion-icon>
@@ -157,22 +163,28 @@
                   <span class="value_description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam fugiat alias possimus sequi deleniti nihil dolor, molestias qui minus amet.</span>
                 </div>
                 <div class="kjww_amw">
-                  <div class="wiuk_language">
+                  <div class="wiuk_language mawh">
                     <ion-icon name="repeat-outline"></ion-icon>
-                    <span class="value_language">HTML, CSS, JS</span>
+                    <span class="value_language wkuj_wiue">HTML, CSS, JS</span>
                   </div>
-                  <ion-icon name="eye-outline"></ion-icon>
-                  <ion-icon name="code-slash-outline"></ion-icon>
+                  <div class="mawh">
+                    <ion-icon name="eye-outline"></ion-icon>
+                    <span class="wkuj_wiue">View</span>
+                  </div>
+                    <div class="mawh">
+                    <ion-icon name="code-slash-outline"></ion-icon>
+                    <span class="">Source</span>
+                  </div>
                 </div>
               </div>
-              <div class="div_for_img">
+              <div class="div_for_img div_for_img_">
                 <img src="./assets/image/Elysia!!.jpg" alt="Img Project" class="preview">
               </div>
-              <a href="http://" target="_blank" rel="noopener noreferrer" class="more_information_project">
+              <a href="http://" target="_blank" rel="noopener noreferrer" class="more_information_project more_information_project_">
                 <span class="view_more_p">More</span>
                 <ion-icon name="chevron-forward-outline"></ion-icon>
               </a>
-          </a>
+          </div>
 
         </div>
       </div>
