--- a/index_project.html
+++ b/index_project.html
@@ -74,7 +74,7 @@
 
       <div class="project">
         <div class="card_profile">
-          <img src="./assets/image/Avt_cicle.ico" alt="myAvt">
+          <img class="aklj_jqhw" src="./assets/image/Avt_cicle.ico" alt="myAvt">
           <span class="name">Tokisaki Nino</span>
           <span class="github_name">@TokisakiNinoVn</span>
           <ul class="contacts">
