--- a/index_project.html
+++ b/index_project.html
@@ -75,8 +75,8 @@
       <div class="project">
         <div class="card_profile">
           <img class="aklj_jqhw" src="./assets/image/Avt_cicle.ico" alt="myAvt">
-          <span class="name">Tokisaki Nino</span>
-          <span class="github_name">@TokisakiNinoVn</span>
+          <span class="author_name">Tokisaki Nino</span>
+          <!-- <span class="github_name">@TokisakiNinoVn</span> -->
           <ul class="contacts">
             <li>
               <a href="http://" target="_blank" rel="noopener noreferrer">
