--- a/index_project.html
+++ b/index_project.html
@@ -106,7 +106,7 @@
         </div>
         <div class="list_project">
 
-          <div href="https://nino.is-a.dev" class="item_project">
+          <!-- <div href="https://nino.is-a.dev" class="item_project">
             <div class="div_for_img">
               <img src="./assets/image/Elysia!!.jpg" alt="Img Project" class="preview">
             </div>
@@ -144,9 +144,9 @@
                 <span class="view_more_p">More</span>
                 <ion-icon name="chevron-forward-outline"></ion-icon>
               </a>
-          </div>
+          </div> -->
 
-          <div href="https://nino.is-a.dev" class="item_project">
+          <!-- <div href="https://nino.is-a.dev" class="item_project">
               <div class="content_project">
                 <div class="top_content top_content_">
                   <div class="first_update">
@@ -184,7 +184,7 @@
                 <span class="view_more_p">More</span>
                 <ion-icon name="chevron-forward-outline"></ion-icon>
               </a>
-          </div>
+          </div> -->
 
         </div>
       </div>
