--- a/404.html
+++ b/404.html
@@ -61,7 +61,7 @@
     </header>
 
     <div class="main">
-        <img src="./assets/image/Ai.jpg" alt="Hoshino Ai">
+        <img src="./assets/image/Elysia!!.jpg" alt="Hoshino Ai">
         <h2>Sorry, the website is under maintenance, please come back later! 😉</h2>
         <a href="./index.html">Back to Home.</a>
     </div>
