--- a/index_project.html
+++ b/index_project.html
@@ -70,7 +70,7 @@
     </header>
 
     <div class="main">
-      <span class="title">My Project</span>
+      <span class="title">My Projects</span>
 
       <div class="project">
         <div class="card_profile">
