--- a/index.html
+++ b/index.html
@@ -61,15 +61,10 @@
                     <a href="index.html">Home</a>
                   </li>
                   <!-- <li class="limenuRight"><a href="./404.html">Posts</a></li> -->
-                  <li class="limenuRight"><a href="./index_project.html">Projects</a></li>
-                  <li class="limenuRight"><a href="./404.html">Messages</a></li>
-                  <li class="limenuRight"><a href="index_about.html">About</a></li>
-                  <!-- <li class="limenuRight">
-                      <div class="toggle-btn _1st-toggle-btn" id="mode-link" onclick="toggleLightMode()">
-                        <input type="checkbox">
-                        <span></span>
-                      </div>
-                  </li> -->
+                  <li class="limenuRight"><a href="./index_project.html"><ion-icon name="albums-outline"></ion-icon>Projects</a></li>
+                  <!-- <li class="limenuRight"><a href="./404.html">Messages</a></li> -->
+                  <li class="limenuRight"><a href="index_about.html"><ion-icon name="code-slash-outline"></ion-icon>Codes</a></li>
+                  <li class="limenuRight"><a href="index_about.html"><ion-icon name="information-outline"></ion-icon>About</a></li>
                 </ul>
               </div>
         </nav> 
@@ -173,5 +168,7 @@
     <script src="./src/js/js_index.js"></script>
     <script src="./src/js/js_protect.js"></script>
 
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
