--- a/index_about.html
+++ b/index_about.html
@@ -40,23 +40,21 @@
         <div class="container">
             <nav class="navbar">
             <div class="navbar-header-logo">
-                <a href="https://nino.is-a.dev/">Nino</a>
+                <a href="index.html">Nino</a>
             </div>
             <div class="menu-toggle" onclick="toggleMenu()">☰ Menu</div>
-                <div class="menu-navbar-right">
+            <div class="menu-navbar-right">
                 <ul class="list">
-                    <li class="limenuRight"><a href="https://nino.is-a.dev/">Home</a></li>
-                    <!-- <li class="limenuRight"><a href="./404.html">Posts</a></li> -->
-                    <li class="limenuRight"><a href="./index_project.html">Projects</a></li>
-                    <li class="limenuRight"><a href="./404.html">Messages</a></li>
-                    <li><a href="index_about.html"><b>About</b></a></li>
-                    <!-- <li>
-                        <div class="toggle-btn _1st-toggle-btn" id="mode-link" onclick="toggleLightMode()">
-                            <input type="checkbox">
-                            <span></span>
-                        </div>
-                    </li> -->
+                  <li class="limenuRight">
+                    <a href="index.html">Home</a>
+                  </li>
+                  <!-- <li class="limenuRight"><a href="./404.html">Posts</a></li> -->
+                  <li class="limenuRight"><a href="./index_project.html"><ion-icon name="albums-outline"></ion-icon>Projects</a></li>
+                  <!-- <li class="limenuRight"><a href="./404.html">Messages</a></li> -->
+                  <li class="limenuRight"><a href="index_about.html"><ion-icon name="code-slash-outline"></ion-icon>Codes</a></li>
+                  <li class="limenuRight"><a href="index_about.html"><ion-icon name="information-outline"></ion-icon>About</a></li>
                 </ul>
+              </div>
             
             </nav> 
         </div>
