--- a/index_project.html
+++ b/index_project.html
@@ -40,31 +40,18 @@
               <a href="./index.html">Nino</a>
             </div>
             <div class="menu-toggle" onclick="toggleMenu()">☰ Menu</div>
-              <div class="menu-navbar-right">
-                <ul class="list">
-                  <li class="limenuRight"><a href="index.html">Home</a></li>
-                  <!-- <li><a href="./404.html">Actions</a></li> -->
-                  <li>
-                    <a href="index_project.html">
-                      <ion-icon name="pulse-outline"></ion-icon>
-                      <b>Projects</b>
-                    </a>
-                  </li>
-                  <li><a href="./404.html">Messages</a></li>
-                  <li>
-                    <a href="index_about.html">
-                      <ion-icon name="scan-outline"></ion-icon>
-                      About
-                    </a>
-                  </li>
-                  <!-- <li>
-                      <div class="toggle-btn _1st-toggle-btn" id="mode-link">
-                        <input type="checkbox">
-                        <span></span>
-                      </div>
-                  </li> -->
-                </ul>
-              </div>
+            <div class="menu-navbar-right">
+              <ul class="list">
+                <li class="limenuRight">
+                  <a href="index.html">Home</a>
+                </li>
+                <!-- <li class="limenuRight"><a href="./404.html">Posts</a></li> -->
+                <li class="limenuRight"><a href="./index_project.html"><ion-icon name="albums-outline"></ion-icon>Projects</a></li>
+                <!-- <li class="limenuRight"><a href="./404.html">Messages</a></li> -->
+                <li class="limenuRight"><a href="index_about.html"><ion-icon name="code-slash-outline"></ion-icon>Codes</a></li>
+                <li class="limenuRight"><a href="index_about.html"><ion-icon name="information-outline"></ion-icon>About</a></li>
+              </ul>
+            </div>
         </nav> 
       </div>
     </header>
