update: css, index.html

--- a/index_about.html
+++ b/index_about.html
@@ -80,12 +80,12 @@
                         <div class="status_discord"></div>
                     </div>
                     <div class="true-nick_name">
-                        <span class="true_name">Tokisaki Nino <span class="nick_name">(Guardian of Heaven)</span></span>
+                        <span class="true_name">Tokisaki Nino <span class="nick_name">(Ego)</span></span>
                         <span class="pronuns">🌠Nio/He/Him</span>
                         <ul class="weiu">
                             <li><span class="following">[11]</span> Following</li>
                             <li><span class="count_post">[!!]</span> Posts</li>
-                            <li><span id="totalViewCount" class="views">[!!]</span> View</li>
+                            <li><span id="totalViewCount" class="views">[!!]</span> Views</li>
                         </ul>
                     </div>
                 </div>
