update: change theme all

--- a/index.html
+++ b/index.html
@@ -31,15 +31,11 @@
     <!-- Button MXH - Contact -->
     <link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="./assets/css/contact.css" rel="stylesheet" type="text/css">  
     
     <!-- Footer -->
-    <!-- <link href="./assets/css/footer.css" rel="stylesheet" type="text/css"> -->
-
   </head>
 
-  <body id="light-mode">
-
+  <body>
     <div class="loader-wrapper">
       <div class="loader"></div>
       <div class="window-left" id="window-left"></div>
@@ -50,21 +46,23 @@
       <div class="container">
           <nav class="navbar">
             <div class="navbar-header-logo">
-              <a href="index.html">Nino</a>
+              <a href="index.html">
+                <img class="logo-image" src="assets/images/logo-elysia.jpg" alt="">
+              </a>
             </div>
 
             <div class="menu-toggle" onclick="toggleMenu()">☰ Menu</div>
-            
               <div class="menu-navbar-right">
                 <ul class="list">
                   <li class="limenuRight">
                     <a href="index.html">Home</a>
                   </li>
-                  <!-- <li class="limenuRight"><a href="./404.html">Posts</a></li> -->
+                  <!-- <li class="limenuRight"><a href=""><ion-icon name="person-outline"></ion-icon>Profile</a></li> -->
+                  <li class="limenuRight"><a href=""><ion-icon name="film-outline"></ion-icon>Blogs</a></li>
+                  <li class="limenuRight"><a href=""><ion-icon name="heart-outline"></ion-icon>Gallery</a></li>
                   <li class="limenuRight"><a href="./index_project.html"><ion-icon name="albums-outline"></ion-icon>Projects</a></li>
-                  <!-- <li class="limenuRight"><a href="./404.html">Messages</a></li> -->
                   <li class="limenuRight"><a href="index_about.html"><ion-icon name="code-slash-outline"></ion-icon>Codes</a></li>
-                  <li class="limenuRight"><a href="index_about.html"><ion-icon name="information-outline"></ion-icon>About</a></li>
+                  <li class="limenuRight"><a href="index_about.html"><ion-icon name="information-outline"></ion-icon>About Mee</a></li>
                 </ul>
               </div>
         </nav> 
