--- a/index_about.html
+++ b/index_about.html
@@ -68,21 +68,21 @@
         </div> -->
 
         <div class="background_img">
-            <img src="./assets/images/bgr.jpg" alt="">
+            <img src="./assets/images/kpow-2871.png" alt="">
         </div>
 
         <div class="name_basic">
             <div class="name_center">
                 <div class="name_left">
                     <div class="img_avatar">
-                        <img class="img_avatar" src="./assets/images/Avt.jpg" alt="avt">
-                        <img class="frame_avatar" src="./assets/images/frame_1.webp" alt="frame">
+                        <img class="img_avatar" src="./assets/images/Elysia-best.jpg" alt="avt">
+                        <img class="frame_avatar" src="./assets/images/neko-cute-frame.png" alt="frame">
                         <div class="status_discord"></div>
                     </div>
                     <div class="true-nick_name">
                         <span class="true_name">Tokisaki Nino <span class="nick_name">(Ego)</span></span>
                         <span class="pronuns">🌠Nio/He/Him</span>
-                        <ul class="weiu">
+                        <ul class="weiu hidden">
                             <li><span class="following">[11]</span> Following</li>
                             <li><span class="count_post">[!!]</span> Posts</li>
                             <li><span id="totalViewCount" class="views">[!!]</span> Views</li>
